<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login">Login</string>
    <string name="please_login_below">Please Login below!</string>
    <string name="myhometown">MyHometown</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">7BITKTZjnkbgTa1qJBdDDqcs0niftbNG6r5vG7nf</string>
    <string name="back4app_client_key">ZI7BhxZyesYFrTp8ZOuehTNMDer8dojZuy0v52aR</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_city_page">Create City Page</string>
    <string name="logout">Logout</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="enter_state_name">Enter State Name</string>
    <string name="create_a_new_city">Create a New City</string>
    <string name="back">Back</string>
    <string name="title_activity_city">CityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_alert">Create Alert</string>
    <string name="subscribe">Subscribe</string>
    <string name="enter_alert_title">Enter Alert Title</string>
    <string name="enter_alert_description">Enter Alert Description:</string>
</resources>
